--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ style="width:600px;length:600px;">
 
 <div class="displayed">
 <a href="olympics.html" class="btn btn-lg btn-primary">Anish, can you center this?</a>
+button::-moz-focus-inner,input::-moz-focus-inner{padding:0;border:0}
 </div>
 
 
