--- a/olympics.html
+++ b/olympics.html
@@ -47,7 +47,7 @@
   endurance, bocheyball, shot put, and muscular development.
 </p>
 </div>
-<a href="index.html" class="btn btn-lg btn-primary" >Back to the home page</a>
+<a href="index.html" class="btn btn-lg btn-primary" > <--- Back to the home page </a>
 
 
 </body>   
