--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <link rel='stylesheet' href='style.css'>
   <meta charset="utf-8">
   <style>
-    
+  .center {
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+    background-color: #b0e0e6;  
   </style>  
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
@@ -43,9 +47,9 @@ style="width:600px;length:600px;">
  
 </div>
   
-
+<div class="center">
 <a href="olympics.html" class="btn btn-lg btn-primary"> Next --> </a>
-
+</div>
 
 </body>   
 </html>
