--- a/olympics.html
+++ b/olympics.html
@@ -43,7 +43,9 @@
 
 <div style="background-color: #99AAFF; color:white; margin:20px; padding:20px;">
   <p>
-  The Olympics are a variety of events in which we must prove our excellence as a team in basketball, tennis, cardiovascular 
+  The Olympics are a variety of events in which we must prove our excellence as a team in basketball, lacrosse, 
+  
+  tennis, cardiovascular 
   endurance, bocheyball, shot put, and muscular development.
 </p>
 </div>
