--- a/olympics.html
+++ b/olympics.html
@@ -44,9 +44,7 @@
 <div style="background-color: #99AAFF; color:white; margin:20px; padding:20px;">
   <p>
   The Olympics are a variety of events in which we must prove our excellence as a team in basketball, lacrosse, 
-  
-  tennis, cardiovascular 
-  endurance, bocheyball, shot put, and muscular development.
+  tennis, cardiovascular endurance, bocceball, shot put, and muscular development.
 </p>
 </div>
 <a href="index.html" class="btn btn-lg btn-primary" > <--- Back to the home page </a>
