--- a/olympics.html
+++ b/olympics.html
@@ -6,7 +6,11 @@
   <link rel='stylesheet' href='style.css'>
   <meta charset="utf-8">
   <style>
-    
+  .center {
+    margin-left: auto;
+    margin-right: auto;
+    width: 7.3%;
+    background-color: #b0e0e6;   
   </style>  
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
@@ -47,8 +51,10 @@
   tennis, cardiovascular endurance, bocceball, shot put, and muscular development.
 </p>
 </div>
-<a href="index.html" class="btn btn-lg btn-primary" > <--- Back to the home page </a>
 
+<div class=center>
+<a href="index.html" class="btn btn-lg btn-primary" > <--- Back to the home page </a>
+</div>
 
 </body>   
 </html>
