--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@ style="width:600px;length:600px;">
 <h4>Google supports South Africa as well!</h4>
  
 </div>
+
+<div><p>
+  Mr Mckavish is (in alphabetical order): adventurous, affable, agreeable, ambitious, amiable, amicable, amusing, brave, broad-minded, calm, careful, charming, communicative, considerate, courageous, courteous, creative, decisive, determined, diligent, dynamic, easygoing, enthusiastic, exuberant, fair-minded, faithful, fearless, forceful, frank, friendly, funny, generous, good,hard-working, helpful, honest, humorous, independent, intellectual, intelligent, intuitive, inventive, kind, modest, neat, nice, optimistic, patient, persistent, pioneering, polite, powerful, practical, pro-active, quick-witted, quiet, resourceful, self-confident, self-disciplined, sensible, sensitive, sincere, sociable, straightforward, sympathetic, thoughtful, tidy, tough, understanding, and witty.
+</p>
+</div>
   
 <div class="center">
 <a href="olympics.html" class="btn btn-lg btn-primary"> Next --> </a>
