--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </div>
 
 
-<div style="background-color: #9999FF; color:white; margin:20px; padding:20px;">
+<div class="potato" style="background-color: #9999FF; color:white; margin:20px; padding:20px;">
   <p>
   Hello, Mr. McKavish, and welcome to the official home page of WRMS South Africa Olympics. 
   The team will tell you about our current and past team members, and a bit of info on South Africa itself. 
@@ -42,12 +42,12 @@
 <IMG class="displayed" src=https://lh3.googleusercontent.com/qYfYahEoSWveCtmtCSfr10-nSo7OMx-bIYjQzbTz29ZWVcAjFk5XQ6yMNx8xpoMc3q2dYGIGNZgAjpH5_FQ5rDFyUNGtjR5UuNFDMFE5cA=s660  
 style="width:600px;length:600px;">
 
-<div style="background-color: #9999FF; color:white; margin:20px; padding:20px;">
+<div class="potato" style="background-color: #9999FF; color:white; margin:20px; padding:20px;">
 <h4>Google supports South Africa as well!</h4>
  
 </div>
 
-<div style="background-color: #AA69FF; color:white; margin:20px; padding:20px;"><p>
+<div class="potato" style="background-color: #AA69FF; color:white; margin:20px; padding:20px;"><p>
   Mr Mckavish is (in alphabetical order): adventurous, affable, agreeable, ambitious, amiable, amicable, amusing, brave, broad-minded, calm, careful, charming, communicative, considerate, courageous, courteous, creative, decisive, determined, diligent, dynamic, easygoing, enthusiastic, exuberant, fair-minded, faithful, fearless, forceful, frank, friendly, funny, generous, good,hard-working, helpful, honest, humorous, independent, intellectual, intelligent, intuitive, inventive, kind, modest, neat, nice, optimistic, patient, persistent, pioneering, polite, powerful, practical, pro-active, quick-witted, quiet, resourceful, self-confident, self-disciplined, sensible, sensitive, sincere, sociable, straightforward, sympathetic, thoughtful, tidy, tough, understanding, and witty.
 </p>
 </div>
