--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     margin-left: auto;
     margin-right: auto;
     width: 73px;
+  }
   
+  potato {
+  border: 2px solid #FF00FF;
+  border-radius: 10px;
+  }
   </style>  
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
