--- a/olympics.html
+++ b/olympics.html
@@ -9,8 +9,8 @@
   .center {
     margin-left: auto;
     margin-right: auto;
-    width: 17.2%;
-    background-color: #b0e0e6;   
+    width: 120px;
+    
   </style>  
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
@@ -31,7 +31,7 @@
 </div>
 
 
-<div style="background-color: #FF99FF; color:white; margin:20px; padding:20px;">
+<div style= "potato" background-color: #FF99FF; color:white; margin:20px; padding:20px;">
   <p>
   Our current team members are Arnav Gupta, Sahil Mehta, Akash Mankude, Shray Patel and Anish Punaroor, led by our team captain 
   Karan Sidhu. We created this website using teamwork, creativity, and cooperation. 
@@ -39,13 +39,13 @@
 </div>
 
 
-<div style="background-color: #FF9999; color:white; margin:20px; padding:20px;">
+<div style= "potato" background-color: #FF9999; color:white; margin:20px; padding:20px;">
   <p>
   Mr Mckavish is (in alphabetical order): adventurous, affable, agreeable, ambitious, amiable, amicable, amusing, brave, broad-minded, calm, careful, charming, communicative, considerate, courageous, courteous, creative, decisive, determined, diligent, dynamic, easygoing, enthusiastic, exuberant, fair-minded, faithful, fearless, forceful, frank, friendly, funny, generous, good,hard-working, helpful, honest, humorous, independent, intellectual, intelligent, intuitive, inventive, kind, modest, neat, nice, optimistic, patient, persistent, pioneering, polite, powerful, practical, pro-active, quick-witted, quiet, resourceful,  self-confident, self-disciplined, sensible, sensitive, sincere, sociable, straightforward, sympathetic, thoughtful, tidy, tough, understanding, and witty.
 </p>
 </div>
 
-<div style="background-color: #99AAFF; color:white; margin:20px; padding:20px;">
+<div style= "potato" background-color: #99AAFF; color:white; margin:20px; padding:20px;">
   <p>
   The Olympics are a variety of events in which we must prove our excellence as a team in basketball, lacrosse, 
   tennis, cardiovascular endurance, bocceball, shot put, and muscular development.
