--- a/olympics.html
+++ b/olympics.html
@@ -31,7 +31,7 @@
 </div>
 
 
-<div class= "potato" style= "background-color: #FF99FF; color:white; margin:20px; padding:20px;">
+<div class= "potato" style= "background-color: #BFE896; color:white; margin:20px; padding:20px;">
   <p>
   Our current team members are Arnav Gupta, Sahil Mehta, Akash Mankude, Shray Patel and Anish Punaroor, led by our team captain 
   Karan Sidhu. We created this website using teamwork, creativity, and cooperation. 
