--- a/past.html
+++ b/past.html
@@ -26,8 +26,8 @@
 
 <body>
 <div class='jumbotron' style='padding-bottom: 3em'>
-  <h1>South Africa</h1>
-  <h4>Third Period South Africa created this website for you!</h4>
+  <h1>Contributors</h1>
+  <h4>Past members and contributors</h4>
 </div>
 
 
@@ -49,12 +49,12 @@ style="width:600px;length:600px;">
 </div>
 
 <div class="potato" style="background-color: #AA69FF; color:white; margin:20px; padding:20px;"><p>
-  Mr Mckavish is (in alphabetical order): adventurous, affable, agreeable, ambitious, amiable, amicable, amusing, brave, broad-minded, calm, careful, charming, communicative, considerate, courageous, courteous, creative, decisive, determined, diligent, dynamic, easygoing, enthusiastic, exuberant, fair-minded, faithful, fearless, forceful, frank, friendly, funny, generous, good,hard-working, helpful, honest, humorous, independent, intellectual, intelligent, intuitive, inventive, kind, modest, neat, nice, optimistic, patient, persistent, pioneering, polite, powerful, practical, pro-active, quick-witted, quiet, resourceful, self-confident, self-disciplined, sensible, sensitive, sincere, sociable, straightforward, sympathetic, thoughtful, tidy, tough, understanding, and witty.
+  
 </p>
 </div>
   
 <div class="center">
-<a href="olympics.html" class="btn btn-lg btn-primary"> Next --> </a>
+<a href="olympics.html" class="btn btn-lg btn-primary"> Back Home --> </a>
 </div>
 
 </body>   
