--- a/olympics.html
+++ b/olympics.html
@@ -38,7 +38,9 @@
 </p>
 </div>
 
-
+<IMG class="displayed" src=http://www.google.com/imgres?imgurl=http://upload.wikimedia.org/wikipedia/commons/thumb/5/57/1912_Charles_Winslow.JPG/220px-1912_Charles_Winslow.JPG&imgrefurl=http://en.wikipedia.org/wiki/Charles_Winslow&h=465&w=220&tbnid=Jr1Y5N3MEaGzNM:&zoom=1&docid=anF3322x9COFPM&ei=XLtwVbSYE8bToASUy4HoBA&tbm=isch&ved=0CB0QMygAMAA  
+style="width:600px;length:600px;">
+  
 <div class= "potato" style= "background-color: #FF9999; color:white; margin:20px; padding:20px;">
   <p>
   Mr Mckavish is (in alphabetical order): adventurous, affable, agreeable, ambitious, amiable, amicable, amusing, brave, broad-minded, calm, careful, charming, communicative, considerate, courageous, courteous, creative, decisive, determined, diligent, dynamic, easygoing, enthusiastic, exuberant, fair-minded, faithful, fearless, forceful, frank, friendly, funny, generous, good,hard-working, helpful, honest, humorous, independent, intellectual, intelligent, intuitive, inventive, kind, modest, neat, nice, optimistic, patient, persistent, pioneering, polite, powerful, practical, pro-active, quick-witted, quiet, resourceful,  self-confident, self-disciplined, sensible, sensitive, sincere, sociable, straightforward, sympathetic, thoughtful, tidy, tough, understanding, and witty.
