--- a/olympics.html
+++ b/olympics.html
@@ -38,6 +38,12 @@
 </p>
 </div>
 
+<div>
+ <img src="http://placehold.it/100x100" alt=""  /> 
+ <img src="http://placehold.it/100x100" alt=""  />
+ <img src="http://placehold.it/100x100" alt="" />
+</div>
+
 <IMG class="displayed" src=http://upload.wikimedia.org/wikipedia/commons/thumb/5/57/1912_Charles_Winslow.JPG/220px-1912_Charles_Winslow.JPG  
 style="width:100px;length:50px;">
   
