--- a/olympics.html
+++ b/olympics.html
@@ -39,13 +39,10 @@
 </div>
 
 <div>
- <img src="http://placehold.it/100x100" alt=""  /> 
+ <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/5/57/1912_Charles_Winslow.JPG/220px-1912_Charles_Winslow.JPG/200x200" alt="sweg"  /> 
  <img src="http://placehold.it/100x100" alt=""  />
  <img src="http://placehold.it/100x100" alt="" />
 </div>
-
-<IMG class="displayed" src=http://upload.wikimedia.org/wikipedia/commons/thumb/5/57/1912_Charles_Winslow.JPG/220px-1912_Charles_Winslow.JPG  
-style="width:100px;length:50px;">
   
 <div class= "potato" style= "background-color: #FF9999; color:white; margin:20px; padding:20px;">
   <p>
