--- a/olympics.html
+++ b/olympics.html
@@ -27,7 +27,7 @@
 <body>
 <div class='jumbotron' style='padding-bottom: 3em'>
   <h1>The Team</h1>
-  <h4>All of our team's current and past members</h4>
+  <h4>All of our team's current and past members!</h4>
 </div>
 
 
