--- a/olympics.html
+++ b/olympics.html
@@ -39,7 +39,7 @@
 </div>
 
 <div>
- <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/5/57/1912_Charles_Winslow.JPG/220px-1912_Charles_Winslow.JPG/" alt="div"  /> 
+ <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/5/57/1912_Charles_Winslow.JPG/220px-1912_Charles_Winslow.JPG" alt="div"  /> 
  <img src="http://placehold.it/100x100" alt="" >
  <img src="http://placehold.it/100x100" alt="" >
 </div>
