--- a/olympics.html
+++ b/olympics.html
@@ -40,7 +40,7 @@
 
 <div>
  <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/5/57/1912_Charles_Winslow.JPG/220px-1912_Charles_Winslow.JPG" alt="div"  /> 
- <img src="http://placehold.it/100x100" alt="" >
+ <img src="http://cdn.24.co.za/files/Cms/General/d/14/cd1da96c27124c049d94f59cee55aae4.jpg" alt="" >
  <img src="http://placehold.it/100x100" alt="" >
 </div>
   
