--- a/olympics.html
+++ b/olympics.html
@@ -41,9 +41,15 @@
 <div>
  <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/5/57/1912_Charles_Winslow.JPG/220px-1912_Charles_Winslow.JPG" alt="div"  /> 
  <img src="http://cdn.24.co.za/files/Cms/General/d/14/cd1da96c27124c049d94f59cee55aae4.jpg" alt="" >
- <img src="http://placehold.it/100x100" alt="" >
+ <img src="http://www1.pictures.zimbio.com/gi/2011+T+Winter+National+Championships+URmdnLOJ01Qm.jpg" alt="" >
 </div>
-  
+
+<div class= "potato" style= "background-color: #99AAFF; color:white; margin:20px; padding:20px;">
+  <p>
+  Pictured up above are some of our past team members. On the left is Charles Winslow, who competed in the 1912 and 1920 Summer Olympics for tennis. Winslow won both the gold medal and the bronze medal.
+  In the middle is fellow South African Roland Schoeman, who has earned the gold medal, the silver medal, and the bronze medal in swimming at the 2004 Summer Olympics.
+  At the right is Darian Townsend, another swimmer who has earned the gold medal at the 2004 Summer Olympics.
+  </p>  
 <div class= "potato" style= "background-color: #FF9999; color:white; margin:20px; padding:20px;">
   <p>
   Mr Mckavish is (in alphabetical order): adventurous, affable, agreeable, ambitious, amiable, amicable, amusing, brave, broad-minded, calm, careful, charming, communicative, considerate, courageous, courteous, creative, decisive, determined, diligent, dynamic, easygoing, enthusiastic, exuberant, fair-minded, faithful, fearless, forceful, frank, friendly, funny, generous, good,hard-working, helpful, honest, humorous, independent, intellectual, intelligent, intuitive, inventive, kind, modest, neat, nice, optimistic, patient, persistent, pioneering, polite, powerful, practical, pro-active, quick-witted, quiet, resourceful,  self-confident, self-disciplined, sensible, sensitive, sincere, sociable, straightforward, sympathetic, thoughtful, tidy, tough, understanding, and witty.
