--- a/olympics.html
+++ b/olympics.html
@@ -39,14 +39,14 @@
 </div>
 
 <div>
- <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/5/57/1912_Charles_Winslow.JPG/220px-1912_Charles_Winslow.JPG" alt="div"  /> 
+ <img src="http://dt9guucc6nuua.cloudfront.net/media/LargeP/bf76e9d9-ccb0-4ccc-a198-63e695191c08.jpg?v=1573189280" alt="div"  /> 
  <img src="http://cdn.24.co.za/files/Cms/General/d/14/cd1da96c27124c049d94f59cee55aae4.jpg" alt="" >
  <img src="http://www1.pictures.zimbio.com/gi/2011+T+Winter+National+Championships+URmdnLOJ01Qm.jpg" alt="" >
 </div>
 
 <div class= "potato" style= "background-color: #99AAFF; color:white; margin:20px; padding:20px;">
   <p>
-  Pictured up above are some of our past team members. On the left is Charles Winslow, who competed in the 1912 and 1920 Summer Olympics for tennis. Winslow won both the gold medal and the bronze medal.
+  Pictured up above are some of our past team members. On the left is Mbulaeni Mulaudzi (have fun saying this correctly), who earned the silver medal for running in the 2000 Summer Olympics. 
   In the middle is fellow South African Roland Schoeman, who has earned the gold medal, the silver medal, and the bronze medal in swimming at the 2004 Summer Olympics.
   At the right is Darian Townsend, another swimmer who has earned the gold medal at the 2004 Summer Olympics.
   </p>  
