--- a/olympics.html
+++ b/olympics.html
@@ -50,6 +50,8 @@
   In the middle is fellow South African Roland Schoeman, who has earned the gold medal, the silver medal, and the bronze medal in swimming at the 2004 Summer Olympics.
   At the right is Darian Townsend, another swimmer who has earned the gold medal at the 2004 Summer Olympics.
   </p>  
+  </div>
+  
 <div class= "potato" style= "background-color: #FF9999; color:white; margin:20px; padding:20px;">
   <p>
   Mr Mckavish is (in alphabetical order): adventurous, affable, agreeable, ambitious, amiable, amicable, amusing, brave, broad-minded, calm, careful, charming, communicative, considerate, courageous, courteous, creative, decisive, determined, diligent, dynamic, easygoing, enthusiastic, exuberant, fair-minded, faithful, fearless, forceful, frank, friendly, funny, generous, good,hard-working, helpful, honest, humorous, independent, intellectual, intelligent, intuitive, inventive, kind, modest, neat, nice, optimistic, patient, persistent, pioneering, polite, powerful, practical, pro-active, quick-witted, quiet, resourceful,  self-confident, self-disciplined, sensible, sensitive, sincere, sociable, straightforward, sympathetic, thoughtful, tidy, tough, understanding, and witty.
