--- a/olympics.html
+++ b/olympics.html
@@ -38,6 +38,10 @@
 </p>
 </div>
 
+<div class= "potato" style= "background-color: #00CCFF; color:white; margin:20px; padding:20px;">
+  <h2> Famous South African Olympians</h2>
+  </div>
+  
 <div>
  <img src="http://dt9guucc6nuua.cloudfront.net/media/LargeP/bf76e9d9-ccb0-4ccc-a198-63e695191c08.jpg?v=1573189280" alt="div"  /> 
  <img src="http://cdn.24.co.za/files/Cms/General/d/14/cd1da96c27124c049d94f59cee55aae4.jpg" alt="" >
