--- a/olympics.html
+++ b/olympics.html
@@ -45,7 +45,7 @@
 <div>
  <img src="http://dt9guucc6nuua.cloudfront.net/media/LargeP/bf76e9d9-ccb0-4ccc-a198-63e695191c08.jpg?v=1573189280" alt="div"  /> 
  <img src="http://cdn.24.co.za/files/Cms/General/d/14/cd1da96c27124c049d94f59cee55aae4.jpg" alt="" >
- <img src="http://www1.pictures.zimbio.com/gi/2011+T+Winter+National+Championships+URmdnLOJ01Qm.jpg" alt="" >
+ <img src="http://en.starafrica.com/sport/files/2012/11/Natation_Afrique__du_sud_Darian_Townsend.jpg" alt="" >
 </div>
 
 <div class= "potato" style= "background-color: #99AAFF; color:white; margin:20px; padding:20px;">
