--- a/olympics.html
+++ b/olympics.html
@@ -64,8 +64,19 @@
 
 <div class= "potato" style= "background-color: #99AAFF; color:white; margin:20px; padding:20px;">
   <p>
-  The Olympics are a variety of events in which we must prove our excellence as a team in basketball, lacrosse, 
-  tennis, cardiovascular endurance, bocceball, shot put, and muscular development.
+  The Olympics are a variety of events in which we must prove our excellence as a team in 
+  <li>basketball</li> 
+  <li>lacrosse</li> 
+  <li>tennis</li>
+  <li>badminton</li>
+  <li>cardiovascular endurance</li> 
+  <li>bocceball</li>
+  <li>shot put</li>
+  <li>kickball</li>
+  <li>muscular development</li>
+  <li>yoga</li>
+  
+  
 </p>
 </div>
 
