--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@ style="width:600px;length:600px;">
 
 <div class="potato" style="background-color: #9999FF; color:white; margin:20px; padding:20px;">
 <h4>Google supports South Africa as well!</h4>
- 
+</div>
+
+<div class="potato" style="background-color: #9999FF; color:white; margin:20px; padding:20px;"> 
+<h4>
+The national flag of South Africa!
+</h4>
 </div>
 
 <div class="potato" style="background-color: #AA69FF; color:white; margin:20px; padding:20px;"><p>
