--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ style="width:600px;length:600px;">
 <h4>Google supports South Africa as well!</h4>
 </div>
 
-<div class="potato" style="background-color: #9999FF; color:white; margin:20px; padding:20px;"> 
+<div class="potato" style="background-color: #338585; color:white; margin:20px; padding:20px;"> 
 <h4>
 The national flag of South Africa!
 </h4>
