--- a/index.html
+++ b/index.html
@@ -49,10 +49,13 @@ style="width:600px;length:600px;">
 
 <div class="potato" style="background-color: #338585; color:white; margin:20px; padding:20px;"> 
 <h4>
-The national flag of South Africa!
+The national flag of South Africa (down below)!
 </h4>
 </div>
 
+<IMG class="displayed" src=http://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Flag_of_South_Africa.svg/1280px-Flag_of_South_Africa.svg.png  
+style="width:600px;length:600px;">
+  
 <div class="potato" style="background-color: #AA69FF; color:white; margin:20px; padding:20px;"><p>
   Mr Mckavish is (in alphabetical order): adventurous, affable, agreeable, ambitious, amiable, amicable, amusing, brave, broad-minded, calm, careful, charming, communicative, considerate, courageous, courteous, creative, decisive, determined, diligent, dynamic, easygoing, enthusiastic, exuberant, fair-minded, faithful, fearless, forceful, frank, friendly, funny, generous, good,hard-working, helpful, honest, humorous, independent, intellectual, intelligent, intuitive, inventive, kind, modest, neat, nice, optimistic, patient, persistent, pioneering, polite, powerful, practical, pro-active, quick-witted, quiet, resourceful, self-confident, self-disciplined, sensible, sensitive, sincere, sociable, straightforward, sympathetic, thoughtful, tidy, tough, understanding, and witty.
 </p>
