--- a/index.html
+++ b/index.html
@@ -60,7 +60,17 @@ style="width:600px;length:600px;">
   Mr Mckavish is (in alphabetical order): adventurous, affable, agreeable, ambitious, amiable, amicable, amusing, brave, broad-minded, calm, careful, charming, communicative, considerate, courageous, courteous, creative, decisive, determined, diligent, dynamic, easygoing, enthusiastic, exuberant, fair-minded, faithful, fearless, forceful, frank, friendly, funny, generous, good,hard-working, helpful, honest, humorous, independent, intellectual, intelligent, intuitive, inventive, kind, modest, neat, nice, optimistic, patient, persistent, pioneering, polite, powerful, practical, pro-active, quick-witted, quiet, resourceful, self-confident, self-disciplined, sensible, sensitive, sincere, sociable, straightforward, sympathetic, thoughtful, tidy, tough, understanding, and witty.
 </p>
 </div>
-  
+
+<div class="potato" style="background-color: #9999FF; color:white; margin:20px; padding:20px;">
+<h4>
+  Fun Facts about South Africa!
+</h4> 
+<li>South Africa is located at the southern end of Africa</li>
+<li>South Africa has eleven official languages</li>
+<li>The world's first heart transplant was performed in South Africa</li>
+<li>South Africa produces the second-largest amount of fruit in the world</li>
+<li>The largest diamond in the world was found in Africa</li>
+    
 <div class="center">
 <a href="olympics.html" class="btn btn-lg btn-primary"> Next --> </a>
 </div>
