--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ style="width:600px;length:600px;">
 <li>The world's first heart transplant was performed in South Africa</li>
 <li>South Africa produces the second-largest amount of fruit in the world</li>
 <li>The largest diamond in the world was found in Africa</li>
+</div>
     
 <div class="center">
 <a href="olympics.html" class="btn btn-lg btn-primary"> Next --> </a>
