--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ style="width:600px;length:600px;">
 </p>
 </div>
 
-<div class="potato" style="background-color: #9999FF; color:white; margin:20px; padding:20px;">
+<div class="potato" style="background-color: #FF944D; color:white; margin:20px; padding:20px;">
 <h4>
   Fun Facts about South Africa!
 </h4> 
