--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@ style="width:600px;length:600px;">
 </div>
 
 <div class="potato" style="background-color: #FF944D; color:white; margin:20px; padding:20px;">
-<h4>
-  Fun Facts about South Africa!
-</h4> 
+<h3>Fun Facts about South Africa!</h3> 
+
 <li>South Africa is located at the southern end of Africa</li>
 <li>South Africa has eleven official languages</li>
 <li>The world's first heart transplant was performed in South Africa</li>
