--- a/olympics.html
+++ b/olympics.html
@@ -44,7 +44,7 @@
   
 <div>
  <img src="http://dt9guucc6nuua.cloudfront.net/media/LargeP/bf76e9d9-ccb0-4ccc-a198-63e695191c08.jpg?v=1573189280" alt="div"  /> 
- <img src="http://thenewage.co.za/cms/gall_content/2012/6/2012_6$thumbimg126_Jun_2012_083845393-ll.jpg alt="" >
+ <img src="http://thenewage.co.za/cms/gall_content/2012/6/2012_6$thumbimg126_Jun_2012_083845393-ll.jpg" alt="" >
  <img src="http://en.starafrica.com/sport/files/2012/11/Natation_Afrique__du_sud_Darian_Townsend.jpg" alt="" >
 </div>
 
