--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ style="width:600px;length:600px;">
 </p>
 </div>
 
-<div class="potato" style="background-color: #FF69DD; color:white; margin:20px; padding:20px;">
+<div class="potato" style="background-color: #FFSEXY; color:white; margin:20px; padding:20px;">
 <h2>Fun Facts about South Africa!</h2> 
 
 <li>South Africa is located at the southern end of Africa</li>
