--- a/index.html
+++ b/index.html
@@ -53,13 +53,10 @@ The national flag of South Africa to the left and the South African cricket team
 </h4>
 </div>
 
-<table style="width:100%">
-  <tr>
-    <td><IMG class="displayed" src=http://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Flag_of_South_Africa.svg/1280px-Flag_of_South_Africa.svg.png  
-style="width:600px;length:600px;"></td>
-    <td>IMG class="displayed" src=http://upload.wikimedia.org/wikipedia/commons/c/c9/South_African_Cricket_team_2008.jpg  
-style="width:600px;length:600px;</td>		
-  </tr>
+<div>
+ <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Flag_of_South_Africa.svg/1280px-Flag_of_South_Africa.svg.png" alt="div"  /> 
+ <img src="http://upload.wikimedia.org/wikipedia/commons/c/c9/South_African_Cricket_team_2008.jpg" alt="" >
+</div>
 
   
 <div class="potato" style="background-color: #AA69FF; color:white; margin:20px; padding:20px;"><p>
